correct friend_request
