# friends/tests.py
@@ -2,17 +2,15 @@ from django.test import TestCase, Client
 from django.contrib.auth.models import User
 from rest_framework.test import APIClient
 from rest_framework import status
-from unittest.mock import patch
 from .models import FriendRequest, Friendship
-from .serializers import FriendRequestsSerializer, UserSerializer
 
 
-#test for the model Friend Request
+# test for the model Friend Request
 class FriendRequestModelTests(TestCase):
 
     def setUp(self):
-        self.user1 = User.objects.create_user(username='user1', password='password123')
-        self.user2 = User.objects.create_user(username='user2', password='password123')
+        self.user1 = User.objects.create_user(username='testuser1', password='password123')
+        self.user2 = User.objects.create_user(username='testuser2', password='password123')
 
     def test_create_friend_request(self):
         request = FriendRequest.objects.create(from_user=self.user1, to_user=self.user2)
@@ -21,14 +19,14 @@ class FriendRequestModelTests(TestCase):
         self.assertEqual(request.to_user, self.user2)
 
 
-#send request tests
+# send request tests
 class SendFriendRequestViewTests(TestCase):
 
     def setUp(self):
         self.client = Client()
         self.admin = User.objects.create_superuser(username='admin', email='admin@example.com', password='password')
-        self.user1 = User.objects.create_user(username='user1', password='password')
-        self.user2 = User.objects.create_user(username='user2', password='password')
+        self.user1 = User.objects.create_user(username='testuser1', password='password')
+        self.user2 = User.objects.create_user(username='testuser2', password='password')
         self.client.force_login(self.user1)
 
     def test_send_request_to_self(self):
@@ -70,71 +68,12 @@ class SendFriendRequestViewTests(TestCase):
         self.assertIsNotNone(friend_request)
 
 
-#test for friend requests list
-class FriendshipRequestListViewTestCase(TestCase):
-    def setUp(self):
-        self.client = APIClient()
-
-        self.user1 = User.objects.create_user(username='user1', password='testpass1')
-        self.user2 = User.objects.create_user(username='user2', password='testpass2')
-        self.user3 = User.objects.create_user(username='user3', password='testpass3')
-
-        self.request1 = FriendRequest.objects.create(from_user=self.user1, to_user=self.user2)
-        self.request3 = FriendRequest.objects.create(from_user=self.user3, to_user=self.user1)
-
-        self.client.force_authenticate(user=self.user1)
-
-    def test_friend_request_list_view(self):
-        response = self.client.get(f'/api/friend_requests')
-        self.assertEqual(response.status_code, status.HTTP_200_OK)
-        self.assertEqual(len(response.data), 2)
-
-        friend_request_serializer = FriendRequestsSerializer(self.request1)
-        self.assertIn(friend_request_serializer.data, response.data)
-
-
-#get incoming requests
-class TestFriendshipIncomingRequestListView(TestCase):
-    def setUp(self):
-        self.client = APIClient()
-        self.user1 = User.objects.create_user(username='testuser1', password='testpass1')
-        self.user2 = User.objects.create_user(username='testuser2', password='testpass2')
-        self.friend_request = FriendRequest.objects.create(from_user=self.user1, to_user=self.user2)
-        self.client.force_authenticate(user=self.user2)
-
-    def test_get_queryset(self):
-        response = self.client.get('/api/incoming_friend_requests')
-        self.assertEqual(response.status_code, status.HTTP_200_OK)
-        self.assertEqual(len(response.data), 1)
-
-        friend_request_serializer = FriendRequestsSerializer(self.friend_request)
-        self.assertIn(friend_request_serializer.data, response.data)
-
-
-#get outcoming requests
-class TestFriendshipOutcomingRequestListView(TestCase):
-    def setUp(self):
-        self.client = APIClient()
-        self.user1 = User.objects.create_user(username='testuser1', password='testpass1')
-        self.user2 = User.objects.create_user(username='testuser2', password='testpass2')
-        self.friend_request = FriendRequest.objects.create(from_user=self.user1, to_user=self.user2)
-        self.client.force_authenticate(user=self.user1)
-
-    def test_get_queryset(self):
-        response = self.client.get('/api/outcoming_friend_requests')
-        self.assertEqual(response.status_code, status.HTTP_200_OK)
-        self.assertEqual(len(response.data), 1)
-
-        friend_request_serializer = FriendRequestsSerializer(self.friend_request)
-        self.assertIn(friend_request_serializer.data, response.data)
-
-
-#accept request
+# accept request
 class AcceptFriendRequestViewTest(TestCase):
     def setUp(self):
         self.client = APIClient()
-        self.user1 = User.objects.create_user(username='user1', password='password')
-        self.user2 = User.objects.create_user(username='user2', password='password')
+        self.user1 = User.objects.create_user(username='testuser1', password='password')
+        self.user2 = User.objects.create_user(username='testuser2', password='password')
         self.friend_request = FriendRequest.objects.create(from_user=self.user2, to_user=self.user1)
 
     def test_accept_friend_request_success(self):
@@ -154,12 +93,12 @@ class AcceptFriendRequestViewTest(TestCase):
         self.assertDictEqual(response.json(), {'error': 'Request not found.'})
 
 
-#reject request
+# reject request
 class RejectFriendRequestViewTest(TestCase):
     def setUp(self):
         self.client = APIClient()
-        self.user1 = User.objects.create_user(username='user1', password='password')
-        self.user2 = User.objects.create_user(username='user2', password='password')
+        self.user1 = User.objects.create_user(username='testuser1', password='password')
+        self.user2 = User.objects.create_user(username='testuser2', password='password')
         self.friend_request = FriendRequest.objects.create(from_user=self.user2, to_user=self.user1)
         self.client.force_authenticate(user=self.user1)
 
@@ -176,7 +115,7 @@ class RejectFriendRequestViewTest(TestCase):
         self.assertDictEqual(response.json(), {'error': 'Request not found.'})
 
 
-#delete a friend
+# delete a friend
 class TestRemoveFriendView(TestCase):
     def setUp(self):
         self.client = APIClient()
@@ -205,7 +144,7 @@ class TestRemoveFriendView(TestCase):
         self.assertEqual(response.data, {'error': 'User not found.'})
 
 
-#get friendship status
+# get friendship status
 class TestGetFriendshipStatusView(TestCase):
     def setUp(self):
         self.client = APIClient()
@@ -238,11 +177,12 @@ class TestGetFriendshipStatusView(TestCase):
         self.assertEqual(response.status_code, status.HTTP_400_BAD_REQUEST)
         self.assertEqual(response.data, {'error': 'Это админ'})
 
-#get list of friends
+
+# get list of friends
 class TestFriendshipListViewSet(TestCase):
     def setUp(self):
-        self.user1 = User.objects.create_user(username='user1', password='password1')
-        self.user2 = User.objects.create_user(username='user2', password='password2')
+        self.user1 = User.objects.create_user(username='testuser1', password='password1')
+        self.user2 = User.objects.create_user(username='testuser2', password='password2')
         Friendship.objects.create(from_user=self.user1, to_user=self.user2)
 
         self.client = APIClient()
@@ -254,7 +194,7 @@ class TestFriendshipListViewSet(TestCase):
         self.assertEqual(response.data, [{'id': self.user2.id, 'username': self.user2.username}])
 
 
-#get users list
+# get users list
 class TestUsersListView(TestCase):
     def setUp(self):
         self.client = APIClient()
@@ -266,6 +206,38 @@ class TestUsersListView(TestCase):
 
     def test_get_queryset(self):
         response = self.client.get('/api/search_friends')
+        self.assertEqual(response.status_code, status.HTTP_200_OK)
+        self.assertEqual(len(response.data), 1)
+        self.assertEqual(response.data[0]['username'], 'testuser2')
+
+
+# get incoming requests
+class TestFriendshipIncomingRequestListView(TestCase):
+    def setUp(self):
+        self.client = APIClient()
+        self.user1 = User.objects.create_user(username='testuser1', password='testpass1')
+        self.user2 = User.objects.create_user(username='testuser2', password='testpass2')
+        self.friend_request = FriendRequest.objects.create(from_user=self.user1, to_user=self.user2)
+        self.client.force_authenticate(user=self.user2)
+
+    def test_get_queryset(self):
+        response = self.client.get('/api/incoming_friend_requests')
+        self.assertEqual(response.status_code, status.HTTP_200_OK)
+        self.assertEqual(len(response.data), 1)
+        self.assertEqual(response.data[0]['username'], 'testuser1')
+
+
+# get outcoming requests
+class TestFriendshipOutcomingRequestListView(TestCase):
+    def setUp(self):
+        self.client = APIClient()
+        self.user1 = User.objects.create_user(username='testuser1', password='testpass1')
+        self.user2 = User.objects.create_user(username='testuser2', password='testpass2')
+        self.friend_request = FriendRequest.objects.create(from_user=self.user1, to_user=self.user2)
+        self.client.force_authenticate(user=self.user1)
+
+    def test_get_queryset(self):
+        response = self.client.get('/api/outcoming_friend_requests')
         self.assertEqual(response.status_code, status.HTTP_200_OK)
         self.assertEqual(len(response.data), 1)
         self.assertEqual(response.data[0]['username'], 'testuser2')
